Fixing content center alignment

--- a/index.css
+++ b/index.css
@@ -15,9 +15,13 @@
 }
 /* ---- GENERAL --- */
 body{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color:  var(--clr-secondary-200);
     font-family: var(--ff-base);
-    
+       
 }
 
 /* ----MAIN----*/
@@ -25,7 +29,6 @@ main{
     display: flex;
     flex-direction: column;
     max-width: 350px;
-    /* min-width: 200; */
     background-color: var(--clr-neutral-100);
     border-radius: 5%;
     padding-left: 0;
@@ -129,6 +132,6 @@ footer{
         border-radius: 5% 0 0 5% ;
     }
     .img, .details{
-    width: 60%;
+    flex: 1;
     } 
 } 
